syntax = "proto3";

option java_package = "com.tech.rpc";

service HelloService {
  rpc getHelloMessage(HelloRequest) returns (HelloResponse);
}
message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string greetings = 1;
}